--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@ body{
 }
 
 .days {
-  background: #EF2F3C;
+  background: #66CCFF;
 }
 
 .hours {
-  background: #eeeeee;
+  background: #FFCCFF;
   color: #183059;
 }
 
 .minutes {
-  background: #276FBF;
+  background: #9999FF;
 }
 
 .seconds {
-  background: #F0A202;
+  background: #6699FF;
 }
 
 .numbers {
